get user information API done
